--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
   <link rel="stylesheet" href="stylesheets/styles.css">
   <link rel="stylesheet" href="stylesheets/pygment_trac.css">
   <meta name="viewport" content="width=device-width">
-  <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
 </head>
 
 <body>
@@ -23,9 +20,9 @@
       <p class="view"><a href="http://github.com/orderedlist/minimal">Vai alla repository
           <small>NetworkStataleInformatica</small></a></p>
       <ul>
-        <li><a>Link <strong>Regolamento</strong></a></li>
-        <li><a>Link <strong>Drive</strong></a></li>
-        <li><a href="https://t.me/stataleinformatica">Link <strong>Telegram</strong></a></li>
+        <li><a href="">Link <strong>Regolamento</strong></a></li>
+        <li><a href="">Link <strong>Drive</strong></a></li>
+        <li><a href="https://t.me/stataleinformatica">Canale <strong>Telegram</strong></a></li>
       </ul>
     </header>
     <section>
@@ -34,7 +31,7 @@
       <p>
         <em>
           Ogni corso è dotato di un file latex con le relative FAQ.<br>
-          <a href="https://github.com/NetworkStataleInformatica/faq/tree/master/faq/">Qui</a> puoi accedere alla cartella dei relativi file latex.
+          <a href="https://github.com/NetworkStataleInformatica/faq/tree/master/fileLatex/">Qui</a> puoi accedere alla cartella dei relativi file latex.
         </em>
       </p>
 
@@ -46,44 +43,73 @@
 
       <h3>Primo anno</h3>
       <ul>
-        <li>Matematica del continuo</li>
-        <li>Matematica del continuo</li>
-        <li>Matematica del continuo</li>
-        <li>Matematica del continuo</li>
-        <li>Matematica del continuo</li>
-        <li>Matematica del continuo</li>
+        <em>Primo semestre</em>
+        <ul>
+          <li><a>Matematica del continuo</a></li>
+          <li><a>Programmazione I</a></li>
+          <li><a>Architettura degli elaboratori I</a></li>
+        </ul>
+
+        <em>Secondo semestre</em>
+        <ul>
+          <li><a>Linguaggi formali e automi</a></li>
+          <li><a>Logica matematica</a></li>
+          <li><a>Matematica del discreto</a></li>
+          <li><a>Architettura degli elaboratori II</a></li>
+        </ul>
       </ul>
 
       <h3>Secondo anno</h3>
       <ul>
-        <li>Matematica del continuo</li>
-        <li>Matematica del continuo</li>
-        <li>Matematica del continuo</li>
-        <li>Matematica del continuo</li>
-        <li>Matematica del continuo</li>
-        <li>Matematica del continuo</li>
+        <em>Primo semestre</em>
+        <ul>
+          <li><a>Algoritmi e strutture dati</a></li>
+          <li><a>Basi di dati</a></li>
+          <li><a>Programmazione II</a></li>
+        </ul>
+  
+        <em>Secondo semestre</em>
+        <ul>
+          <li><a>Sistemi operativi</a></li>
+          <li><a>Statistica e analisi dei dati</a></li>
+        </ul>
       </ul>
 
       <h3>Terzo anno</h3>
       <ul>
-        <li>Matematica del continuo</li>
-        <li>Matematica del continuo</li>
+        <em>Primo semestre</em>
+        <ul>
+          <li><a>Ingegneria del software</a></li>
+          <li><a>Reti di calcolatori</a></li>
+        </ul>
       </ul>
 
       <h3>Complementari</h3>
       <ul>
-        <li>Matematica del continuo</li>
-        <li>Matematica del continuo</li>
-        <li>Matematica del continuo</li>
-        <li>Matematica del continuo</li>
-        <li>Matematica del continuo</li>
-        <li>Matematica del continuo</li>
-        <li>Matematica del continuo</li>
-        <li>Matematica del continuo</li>
-        <li>Matematica del continuo</li>
-        <li>Matematica del continuo</li>
-        <li>Matematica del continuo</li>
-        <li>Matematica del continuo</li>
+        <em>Primo semestre</em>
+        <ul>
+          <li><a>Crittografia I</a></li>
+          <li><a>Editoria digitale</a></li>
+          <li><a>Elaborazione dei segnali</a></li>
+          <li><a>Elaborazione delle immagini</a></li>
+          <li><a>Fisica</a></li>
+          <li><a>Intelligenza artificiale I</a></li>
+          <li><a>Linguaggi di programmazione</a></li>
+          <li><a>Sicurezza e privatezza</a></li>
+          <li><a>Sistemi informativi</a></li>
+        </ul>
+
+        <em>Secondo semestre</em>
+        <ul>
+          <li><a>Complementi di algoritmi e strutture dati</a></li>
+          <li><a>Fondamenti di social media digitali</a></li>
+          <li><a>Linguaggi e traduttori</a></li>
+          <li><a>Programmazione dichiarativa</a></li>
+          <li><a>Ricerca operativa</a></li>
+          <li><a>Sistemi embedded</a></li>
+          <li><a>Tecnologie e linguaggi per il web</a></li>
+          <li><a>Visualizzazione scientifica</a></li>
+        </ul>
       </ul>
       
 
@@ -175,13 +201,13 @@ end
           -->
     </section>
     <footer>
-      <p>Il sito è gestito dai rappresentanti<br> del dipartimento di informatica. <a
-          href="http://github.com/orderedlist">https://github.com/NetworkStataleInformatica</a></p>
+      <p>
+        Il sito è gestito da alcuni dei rappresentanti del dipartimento di informatica e altri studenti che stanno collaborando al progetto.
+      </p>
       <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small>
       </p>
     </footer>
   </div>
   <script src="javascripts/scale.fix.js"></script>
 </body>
-
 </html>
