Sito web versione 0.3
Aggiunti hover sui pulsanti e aggiunti alcuni link

--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
   <div class="wrapper">
     <header>
       <h1>Network <br>Statale Informatica</h1>
-      <p>Sito web contenente tutte le informazioni che possono essere utili per l'utilizzo del network e dei vari gruppi
-        telegram.</p>
-      <p class="view"><a href="http://github.com/orderedlist/minimal">Vai alla repository
-          <small>NetworkStataleInformatica</small></a></p>
+      <p>Sito web contenente faq dei vari corsi e tutte le informazioni che possono essere utili per l'utilizzo del network.</p>
+      <p class="view">
+        <a href="https://github.com/NetworkStataleInformatica/faq">Vai alla repository
+          <small>faq</small></a>
+      </p>
       <ul>
-        <li><a href="">Link <strong>Regolamento</strong></a></li>
-        <li><a href="">Link <strong>Drive</strong></a></li>
+        <li><a href="https://github.com/NetworkStataleInformatica/faq/tree/master/regolamento/regolamento.pdf">Link <strong>Regolamento</strong></a></li>
+        <li><a href="https://drive.google.com/drive/folders/0BwzuyD3iLGcbcUNxTVNOVE9FR1E">Link <strong>Drive</strong></a></li>
         <li><a href="https://t.me/stataleinformatica">Canale <strong>Telegram</strong></a></li>
       </ul>
     </header>
@@ -31,7 +32,7 @@
       <p>
         <em>
           Ogni corso è dotato di un file latex con le relative FAQ.<br>
-          <a href="https://github.com/NetworkStataleInformatica/faq/tree/master/fileLatex/">Qui</a> puoi accedere alla cartella dei relativi file latex.
+          <a href="https://github.com/NetworkStataleInformatica/faq/tree/master/fileLatex/">Qui</a> puoi accedere alla cartella dei file latex.
         </em>
       </p>
 
@@ -202,7 +203,7 @@ end
     </section>
     <footer>
       <p>
-        Il sito è gestito da alcuni dei rappresentanti del dipartimento di informatica e altri studenti che stanno collaborando al progetto.
+        Il sito è gestito da alcuni dei rappresentanti del dipartimento di informatica e da altri studenti che stanno collaborando al progetto.
       </p>
       <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small>
       </p>
