Main h1 added link

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="wrapper">
     <header>
-      <h1>Network <br>Statale Informatica</h1>
+      <h1><a href="https://github.com/NetworkStataleInformatica">Network <br>Statale Informatica</h1></a>
       <p>Sito web contenente faq dei vari corsi e tutte le informazioni che possono essere utili per l'utilizzo del network.</p>
       <p class="view">
         <a href="https://github.com/NetworkStataleInformatica/faq">Vai alla repository
