--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <div class="wrapper">
     <header>
       <h1><a href="https://github.com/NetworkStataleInformatica">Network <br>Statale Informatica</h1></a>
+      <div><img src="logo.png" style="width:150px; height:150px; padding-left:50px;"><br><br></div>
       <p>Sito web contenente faq dei vari corsi e tutte le informazioni che possono essere utili per l'utilizzo del network.</p>
       <p class="view">
         <a href="https://github.com/NetworkStataleInformatica/faq">Vai alla repository
