Aggiunti icona e descrizione del sito

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
   <link rel="stylesheet" href="stylesheets/styles.css">
   <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+  <link rel="icon" href="logo.png" type="image/icon type">
+  <meta name="author" content="NetworkStataleInformatica">
+  <meta name="description" content="Sito web contenente faq dei vari corsi e tutte le informazioni che possono essere utili per l'utilizzo del network.">
   <meta name="viewport" content="width=device-width">
 </head>
 
