Aggiunti link dei gruppi + link per le faq

--- a/index.html
+++ b/index.html
@@ -29,38 +29,69 @@
         <li><a href="https://drive.google.com/drive/folders/0BwzuyD3iLGcbcUNxTVNOVE9FR1E">Link <strong>Drive</strong></a></li>
         <li><a href="https://t.me/stataleinformatica">Canale <strong>Telegram</strong></a></li>
       </ul>
+      <p class="view">
+        <a href="https://t.me/joinchat/ALnoP0sisnneYcGOpUaRiA">Gruppo dei materiali</a>
+        <br>
+        <a href="https://t.me/joinchat/ALnoP0haA-GjHjmlmbW-vg">Gruppo per le ripetizioni</a>
+      </p>
     </header>
-    <section>
+
+
+    <section id="faq">
       <h2>Faq dei corsi</h2>
 
       <p>
         <em>
-          Ogni corso è dotato di un file latex con le relative FAQ.<br>
+          Ogni corso è dotato di un file latex con le relative FAQ; il link porta ovviamente al pdf, e se non è
+          ancora stato creato è segnato in rosso.<br>
           <a href="https://github.com/NetworkStataleInformatica/faq/tree/master/fileLatex/">Qui</a> puoi accedere alla cartella dei file latex.
         </em>
       </p>
 
+      <!--
       <blockquote>
         <p>
           
         </p>
       </blockquote>
+      -->
 
       <h3>Primo anno</h3>
       <ul>
         <em>Primo semestre</em>
         <ul>
-          <li><a>Matematica del continuo</a></li>
-          <li><a>Programmazione I</a></li>
-          <li><a>Architettura degli elaboratori I</a></li>
+          <li>
+            <a href="https://t.me/joinchat/ALnoP1LJj2lM8MLaaKK02w">Matematica del continuo</a>
+            <a><small class="linkNotAvailable">faq</small></a>
+          </li>
+          <li>
+            <a href="https://t.me/joinchat/ALnoP0UAAauNVlk06fKilg">Programmazione I</a>
+            <a><small class="linkNotAvailable">faq</small></a>
+          </li>
+          <li>
+            <a href="https://t.me/joinchat/ALnoP0bMb24aFnyID2xzqg">Architettura degli elaboratori I</a>
+            <a><small class="linkNotAvailable">faq</small></a>
+          </li>
         </ul>
 
         <em>Secondo semestre</em>
         <ul>
-          <li><a>Linguaggi formali e automi</a></li>
-          <li><a>Logica matematica</a></li>
-          <li><a>Matematica del discreto</a></li>
-          <li><a>Architettura degli elaboratori II</a></li>
+          <li>
+            <a href="https://t.me/joinchat/ALnoP0iK5gEJLXWH6GpnFw">Linguaggi formali e automi</a>
+            <a><small class="linkNotAvailable">faq</small></a>
+          </li>
+          <li>
+            <a href="https://t.me/joinchat/ALnoP0cgIJQYZJI47-Rorg">Logica matematica</a>
+            <a><small class="linkNotAvailable">faq</small></a>
+          </li>
+          <li>
+            <a href="https://t.me/joinchat/ALnoP0x7F6xl_pmnHRmGvw">Matematica del discreto</a>
+            <a><small class="linkNotAvailable">faq</small></a>
+          </li>
+          <li>
+            <a href="https://t.me/joinchat/ALnoP08pDVwN2hP_tjLrRw">Architettura degli elaboratori II</a>
+            <a><small class="linkNotAvailable">faq</small></a>
+          </li>
         </ul>
       </ul>
 
@@ -68,15 +99,30 @@
       <ul>
         <em>Primo semestre</em>
         <ul>
-          <li><a>Algoritmi e strutture dati</a></li>
-          <li><a>Basi di dati</a></li>
-          <li><a>Programmazione II</a></li>
+          <li>
+            <a href="https://t.me/joinchat/ALnoP1M4CuVnWpahaSKMGQ">Algoritmi e strutture dati</a>
+            <a><small class="linkNotAvailable">faq</small></a>
+          </li>
+          <li>
+            <a href="https://t.me/joinchat/ALnoP0sjlG15KgDVOp4q4w">Basi di dati</a>
+            <a><small class="linkNotAvailable">faq</small></a>
+          </li>
+          <li>
+            <a href="https://t.me/joinchat/ALnoPxXeodhYwA0nNpY5DQ">Programmazione II</a>
+            <a><small class="linkNotAvailable">faq</small></a>
+          </li>
         </ul>
   
         <em>Secondo semestre</em>
         <ul>
-          <li><a>Sistemi operativi</a></li>
-          <li><a>Statistica e analisi dei dati</a></li>
+          <li>
+            <a href="https://t.me/joinchat/ALnoPxPNU-53LOjIFw8JtA">Sistemi operativi</a>
+            <a><small class="linkNotAvailable">faq</small></a>
+          </li>
+          <li>
+            <a href="https://t.me/joinchat/ALnoP0_aH4mn-NFOoGDvBw">Statistica e analisi dei dati</a>
+            <a><small class="linkNotAvailable">faq</small></a>
+          </li>
         </ul>
       </ul>
 
@@ -84,8 +130,14 @@
       <ul>
         <em>Primo semestre</em>
         <ul>
-          <li><a>Ingegneria del software</a></li>
-          <li><a>Reti di calcolatori</a></li>
+          <li>
+            <a href="https://t.me/joinchat/ALnoPxc61OOgtPP3mWz9bQ">Ingegneria del software</a>
+            <a><small class="linkNotAvailable">faq</small></a>
+          </li>
+          <li>
+            <a href="https://t.me/joinchat/ALnoPxWU39MVqWyUb2pTTA">Reti di calcolatori</a>
+            <a><small class="linkNotAvailable">faq</small></a>
+          </li>
         </ul>
       </ul>
 
@@ -93,27 +145,90 @@
       <ul>
         <em>Primo semestre</em>
         <ul>
-          <li><a>Crittografia I</a></li>
-          <li><a>Editoria digitale</a></li>
-          <li><a>Elaborazione dei segnali</a></li>
-          <li><a>Elaborazione delle immagini</a></li>
-          <li><a>Fisica</a></li>
-          <li><a>Intelligenza artificiale I</a></li>
-          <li><a>Linguaggi di programmazione</a></li>
-          <li><a>Sicurezza e privatezza</a></li>
-          <li><a>Sistemi informativi</a></li>
+          <li>
+            <a href="https://t.me/joinchat/AApF9UwXYK9sZjikC7CepA">Crittografia I</a>
+            <a><small class="linkNotAvailable">faq</small></a>
+          </li>
+          <li>
+            <a href="https://t.me/joinchat/I5_YNhxugMKmbpkvbOnf6Q">Editoria digitale</a>
+            <a><small class="linkNotAvailable">faq</small></a>
+          </li>
+          <li>
+            <a href="https://t.me/joinchat/I5_YNhVTgsClJOS4SjLPWg">Elaborazione dei segnali</a>
+            <a><small class="linkNotAvailable">faq</small></a>
+          </li>
+          <li>
+            <a href="https://t.me/joinchat/B4u5JhYJZRrw_MHmAa3TXA">Elaborazione delle immagini</a>
+            <a><small class="linkNotAvailable">faq</small></a>
+          </li>
+          <li>
+            <a href="https://t.me/joinchat/I5_YNlDpOpCPpoLGAH0obA">Fisica</a>
+            <a><small class="linkNotAvailable">faq</small></a>
+          </li>
+          <li>
+            <a href="https://t.me/joinchat/BnHOHxvl1j6aAdKSf9L1MA">Intelligenza artificiale I</a>
+            <a><small class="linkNotAvailable">faq</small></a>
+          </li>
+          <li>
+            <a href="https://t.me/joinchat/I5_YNhjX2Al4ecpYTP4v4w">Interazioni sociali in rete</a>
+            <a><small class="linkNotAvailable">faq</small></a>
+          </li>
+          <li>
+            <a href="https://t.me/joinchat/ALnoPxdXLbm9HhkNTiav5w">Linguaggi di programmazione</a>
+            <a><small class="linkNotAvailable">faq</small></a>
+          </li>
+          <li>
+            <a href="https://t.me/joinchat/I5_YNhrkrpY2q6ZTcFAiKA">Sistemi informativi</a>
+            <a><small class="linkNotAvailable">faq</small></a>
+          </li>
         </ul>
 
         <em>Secondo semestre</em>
         <ul>
-          <li><a>Complementi di algoritmi e strutture dati</a></li>
-          <li><a>Fondamenti di social media digitali</a></li>
-          <li><a>Linguaggi e traduttori</a></li>
-          <li><a>Programmazione dichiarativa</a></li>
-          <li><a>Ricerca operativa</a></li>
-          <li><a>Sistemi embedded</a></li>
-          <li><a>Tecnologie e linguaggi per il web</a></li>
-          <li><a>Visualizzazione scientifica</a></li>
+          <li>
+            <a href="https://t.me/joinchat/ALnoPxMXgMIb9qAm7EBl9Q">Complementi di algoritmi e strutture dati</a>
+            <a><small class="linkNotAvailable">faq</small></a>
+          </li>
+          <li>
+            <a href="https://t.me/joinchat/I5_YNhux4EmtoynZPO9vig">Diritto dei prodotti digitali</a>
+            <a><small class="linkNotAvailable">faq</small></a>
+          </li>
+          <li>
+            <a href="https://t.me/joinchat/ALnoPx2rf4uBLOWB5bYXVg">Fondamenti di social media digitali</a>
+            <a><small class="linkNotAvailable">faq</small></a>
+          </li>
+          <li>
+            <a href="https://t.me/joinchat/ALnoPxQcx3n95fW4bhoreQ">Gestione dei processi aziendali</a>
+            <a><small class="linkNotAvailable">faq</small></a>
+          </li>
+          <li>
+            <a href="https://t.me/joinchat/ALnoPw_vXNEHd6FfdHo37w">Linguaggi e traduttori</a>
+            <a><small class="linkNotAvailable">faq</small></a>
+          </li>
+          <li>
+            <a href="https://t.me/joinchat/ALnoPxaHoctNRtad2BT-lw">Programmazione dichiarativa</a>
+            <a><small class="linkNotAvailable">faq</small></a>
+          </li>
+          <li>
+            <a href="https://t.me/joinchat/ALnoPxfPPh56XUBx8AmorA">Ricerca operativa</a>
+            <a><small class="linkNotAvailable">faq</small></a>
+          </li>
+          <li>
+            <a href="https://t.me/joinchat/ALnoPxO-64VXTERluGHZnA">Sicurezza e privatezza</a>
+            <a><small class="linkNotAvailable">faq</small></a>
+          </li>
+          <li>
+            <a href="https://t.me/joinchat/ALnoPw8wxMVMet7DYU1NZQ">Sistemi embedded</a>
+            <a><small class="linkNotAvailable">faq</small></a>
+          </li>
+          <li>
+            <a href="https://t.me/joinchat/ALnoP0phoiLo3Ld5LTyUvw">Tecnologie e linguaggi per il web</a>
+            <a><small class="linkNotAvailable">faq</small></a>
+          </li>
+          <li>
+            <a href="https://t.me/joinchat/Ft4Q5ByMEean3SRsTw1FaQ">Visualizzazione scientifica</a>
+            <a><small class="linkNotAvailable">faq</small></a>
+          </li>
         </ul>
       </ul>
       
