--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
         <a href="https://t.me/joinchat/ALnoP0sisnneYcGOpUaRiA">Gruppo dei materiali</a>
         <br>
         <a href="https://t.me/joinchat/ALnoP0haA-GjHjmlmbW-vg">Gruppo per le ripetizioni</a>
+        <br>
+        <a href="http://www.quickunimi.it/">Quick Unimi</a>
       </p>
       <p>
         Il sito è gestito da alcuni dei rappresentanti del dipartimento di informatica e da altri studenti che stanno collaborando al progetto.
@@ -151,7 +153,7 @@
         <em>Primo semestre</em>
         <ul>
           <li>
-            <a href="https://t.me/joinchat/AApF9UwXYK9sZjikC7CepA">Crittografia I</a>
+            <a href="https://t.me/joinchat/I5_YNhzQPtbeFNG-cXzoTQ">Crittografia I</a>
             <a><small class="linkNotAvailable">faq</small></a>
           </li>
           <li>
