Faq generali aggiunte

--- a/index.html
+++ b/index.html
@@ -46,8 +46,15 @@
 
 
     <section id="faq">
-      <h2>Faq dei corsi</h2>
+      <h2>Faq generali</h2> 
+      <p>
+        <em>
+          È possibile trovare domande <b>generali</b> fatte più frequentemente al seguente
+          <a href="https://orientamento.di.unimi.it/index.php/iniziative/tutor-di-processo">link</a>.
+        </em>
+      </p>
 
+      <h2>Faq dei corsi</h2>
       <p>
         <em>
           Ogni corso è dotato di un file latex con le relative FAQ; il link porta ovviamente al pdf, e se non è
