Aggiunto link computer graphics

--- a/index.html
+++ b/index.html
@@ -205,6 +205,10 @@
             <a><small class="linkNotAvailable">faq</small></a>
           </li>
           <li>
+            <a href="https://t.me/joinchat/I5_YNkwGaVC3bzO-qUersA">Computer graphics</a>
+            <a><small class="linkNotAvailable">faq</small></a>
+          </li>
+          <li>
             <a href="https://t.me/joinchat/I5_YNhux4EmtoynZPO9vig">Diritto dei prodotti digitali</a>
             <a><small class="linkNotAvailable">faq</small></a>
           </li>
