Aggiunte prime faq + alcuni fix

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <small>faq</small></a>
       </p>
       <ul>
-        <li><a href="https://github.com/NetworkStataleInformatica/faq/tree/master/regolamento/regolamento.pdf">Link <strong>Regolamento</strong></a></li>
+        <li><a href="regolamento/regolamento.pdf">Link <strong>Regolamento</strong></a></li>
         <li><a href="https://drive.google.com/drive/folders/0BwzuyD3iLGcbcUNxTVNOVE9FR1E">Link <strong>Drive</strong></a></li>
         <li><a href="https://t.me/stataleinformatica">Canale <strong>Telegram</strong></a></li>
       </ul>
@@ -46,6 +46,14 @@
 
 
     <section id="faq">
+      <h2>Avvisi</h2> 
+      <p>
+        <em>
+          Sono state create le FAQ del corso di "Tecnologie e linguaggi web".<br>
+          Se vuoi contribuire allo sviluppo di esse puoi contattare <a href="https://t.me/giuseppetm">@giuseppetm</a> su telegram.
+        </em>
+      </p>
+
       <h2>Faq generali</h2> 
       <p>
         <em>
@@ -59,7 +67,7 @@
         <em>
           Ogni corso è dotato di un file latex con le relative FAQ; il link porta ovviamente al pdf, e se non è
           ancora stato creato è segnato in rosso.<br>
-          <a href="https://github.com/NetworkStataleInformatica/faq/tree/master/fileLatex/">Qui</a> puoi accedere alla cartella dei file latex.
+          <a href="faq_files/">Qui</a> puoi accedere alla cartella dei file latex.
         </em>
       </p>
 
@@ -242,7 +250,7 @@
           </li>
           <li>
             <a href="https://t.me/joinchat/ALnoP0phoiLo3Ld5LTyUvw">Tecnologie e linguaggi per il web</a>
-            <a><small class="linkNotAvailable">faq</small></a>
+            <small class="linkAvailable"><a href="faq_files/tecnologie_e_linguaggi_web/tecnologie_e_linguaggi_web.pdf">faq</a></small>
           </li>
           <li>
             <a href="https://t.me/joinchat/Ft4Q5ByMEean3SRsTw1FaQ">Visualizzazione scientifica</a>
