Aggiunto template e aggiornati avvisi

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
       <p>
         <em>
           Sono state create le FAQ del corso di "Tecnologie e linguaggi web".<br>
-          Se vuoi contribuire allo sviluppo di esse puoi contattare <a href="https://t.me/giuseppetm">@giuseppetm</a> su telegram.
+          Se vuoi contribuire allo sviluppo di esse puoi contattare <a href="https://t.me/giuseppetm">@giuseppetm</a> su telegram.<br>
+          Ci sarebbe da compilare il file latex con le domande del relativo corso seguendo questo <a href="faq_files/template.tex">template</a>.
         </em>
       </p>
 
