--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <em>
           Ogni corso è dotato di un file latex con le relative FAQ; il link porta ovviamente al pdf, e se non è
           ancora stato creato è segnato in rosso.<br>
-          <a href="faq_files/">Qui</a> puoi accedere alla cartella dei file latex.
+          <a href="https://github.com/NetworkStataleInformatica/faq/tree/master/faq_files">Qui</a> puoi accedere alla cartella dei file latex.
         </em>
       </p>
 
