Reti di Calcolatori + Deploy GH pages
- Aggiunge FAQ per Reti di calcolatori
- Cancella PDF dal repository
- Aggiunge Makefile e GH action per compilare e pubblicare il sito con i PDF

--- a/site/index.html
+++ b/site/index.html
@@ -51,7 +51,7 @@
         <em>
           Sono state create le FAQ del corso di "Tecnologie e linguaggi web".<br>
           Se vuoi contribuire allo sviluppo di esse puoi contattare <a href="https://t.me/giuseppetm">@giuseppetm</a> su telegram.<br>
-          Ci sarebbe da compilare il file latex con le domande del relativo corso seguendo questo <a href="faq_files/template.tex">template</a>.
+          Ci sarebbe da compilare il file latex con le domande del relativo corso seguendo questo <a href="https://github.com/NetworkStataleInformatica/faq/blob/master/faq_files/template.tex">template</a>.
         </em>
       </p>
 
@@ -160,7 +160,7 @@
           </li>
           <li>
             <a href="https://t.me/joinchat/ALnoPxWU39MVqWyUb2pTTA">Reti di calcolatori</a>
-            <a><small class="linkNotAvailable">faq</small></a>
+            <a href="faq_files/reti_di_calcolatori/reti_di_calcolatori.pdf"><small class="linkAvailable">faq</small></a>
           </li>
         </ul>
       </ul>
