--- a/site/index.html
+++ b/site/index.html
@@ -49,7 +49,7 @@
       <h2>Avvisi</h2> 
       <p>
         <em>
-          Sono state create le FAQ del corso di "Tecnologie e linguaggi web".<br>
+          Sono state create le FAQ del corso di "Tecnologie e linguaggi web" e "Reti di calcolatori".<br>
           Se vuoi contribuire allo sviluppo di esse puoi contattare <a href="https://t.me/giuseppetm">@giuseppetm</a> su telegram.<br>
           Ci sarebbe da compilare il file latex con le domande del relativo corso seguendo questo <a href="https://github.com/NetworkStataleInformatica/faq/blob/master/faq_files/template.tex">template</a>.
         </em>
@@ -160,7 +160,7 @@
           </li>
           <li>
             <a href="https://t.me/joinchat/ALnoPxWU39MVqWyUb2pTTA">Reti di calcolatori</a>
-            <a href="faq_files/reti_di_calcolatori/reti_di_calcolatori.pdf"><small class="linkAvailable">faq</small></a>
+            <small class="linkAvailable"><a href="faq_files/reti_di_calcolatori/reti_di_calcolatori.pdf">faq</a></small>
           </li>
         </ul>
       </ul>
