Aggiunte faq di Sisop e Prog2

--- a/site/index.html
+++ b/site/index.html
@@ -49,9 +49,10 @@
       <h2>Avvisi</h2> 
       <p>
         <em>
-          Sono state create le FAQ del corso di "Tecnologie e linguaggi web" e "Reti di calcolatori".<br>
+          Pian piano stanno venendo create le varie faq dei corsi.<br>
           Se vuoi contribuire allo sviluppo di esse puoi contattare <a href="https://t.me/giuseppetm">@giuseppetm</a> su telegram.<br>
           Ci sarebbe da compilare il file latex con le domande del relativo corso seguendo questo <a href="https://github.com/NetworkStataleInformatica/faq/blob/master/faq_files/template.tex">template</a>.
+          Si consiglia l'uso di TexLive e TexStudio.
         </em>
       </p>
 
@@ -133,7 +134,7 @@
           </li>
           <li>
             <a href="https://t.me/joinchat/ALnoPxXeodhYwA0nNpY5DQ">Programmazione II</a>
-            <a><small class="linkNotAvailable">faq</small></a>
+            <small class="linkAvailable"><a href="faq_files/programmazione_2/programmazione_2.pdf">faq</a></small>
           </li>
         </ul>
   
@@ -141,7 +142,7 @@
         <ul>
           <li>
             <a href="https://t.me/joinchat/ALnoPxPNU-53LOjIFw8JtA">Sistemi operativi</a>
-            <a><small class="linkNotAvailable">faq</small></a>
+            <small class="linkAvailable"><a href="faq_files/sistemi_operativi/sistemi_operativi.pdf">faq</a></small>
           </li>
           <li>
             <a href="https://t.me/joinchat/ALnoP0_aH4mn-NFOoGDvBw">Statistica e analisi dei dati</a>
