Aggiunte faq di statistica e basi di dati

--- a/site/index.html
+++ b/site/index.html
@@ -130,7 +130,7 @@
           </li>
           <li>
             <a href="https://t.me/joinchat/ALnoP0sjlG15KgDVOp4q4w">Basi di dati</a>
-            <a><small class="linkNotAvailable">faq</small></a>
+            <small class="linkAvailable"><a href="faq_files/basi_di_dati/basi_di_dati.pdf">faq</a></small>
           </li>
           <li>
             <a href="https://t.me/joinchat/ALnoPxXeodhYwA0nNpY5DQ">Programmazione II</a>
@@ -146,7 +146,7 @@
           </li>
           <li>
             <a href="https://t.me/joinchat/ALnoP0_aH4mn-NFOoGDvBw">Statistica e analisi dei dati</a>
-            <a><small class="linkNotAvailable">faq</small></a>
+            <small class="linkAvailable"><a href="faq_files/statistica_e_analisi_dei_dati/statistica_e_analisi_dei_dati.pdf">faq</a></small>
           </li>
         </ul>
       </ul>
