Aggiunte faq di matematica del continuo e prog1

--- a/site/index.html
+++ b/site/index.html
@@ -87,11 +87,11 @@
         <ul>
           <li>
             <a href="https://t.me/joinchat/ALnoP1LJj2lM8MLaaKK02w">Matematica del continuo</a>
-            <a><small class="linkNotAvailable">faq</small></a>
+            <small class="linkAvailable"><a href="faq_files/matematica_del_continuo/matematica_del_continuo.pdf">faq</a></small>
           </li>
           <li>
             <a href="https://t.me/joinchat/ALnoP0UAAauNVlk06fKilg">Programmazione I</a>
-            <a><small class="linkNotAvailable">faq</small></a>
+            <small class="linkAvailable"><a href="faq_files/programmazione_1/programmazione_1.pdf">faq</a></small>
           </li>
           <li>
             <a href="https://t.me/joinchat/ALnoP0bMb24aFnyID2xzqg">Architettura degli elaboratori I</a>
