Aggiornate le informazioni sul sito web

--- a/site/index.html
+++ b/site/index.html
@@ -21,18 +21,24 @@
       <div><img src="logo.png" style="width:150px; height:150px; padding-left:50px;"><br><br></div>
       <p>Sito web contenente faq dei vari corsi e tutte le informazioni che possono essere utili per l'utilizzo del network.</p>
       <p class="view">
-        <a href="https://github.com/NetworkStataleInformatica/faq">Vai alla repository
-          <small>faq</small></a>
+        <a href="https://t.me/faqStataleInformatica" class="important">Vai al canale delle faq
+          <small>faqStataleInformatica</small></a>
+      </p>
+      <p class="view">
+        <a href="https://github.com/NetworkStataleInformatica/faq" class="important">Vai alla repository
+          <small>NetworkStataleInformatica/faq</small></a>
       </p>
       <ul>
         <li><a href="regolamento/regolamento.pdf">Link <strong>Regolamento</strong></a></li>
         <li><a href="https://drive.google.com/drive/folders/0BwzuyD3iLGcbcUNxTVNOVE9FR1E">Link <strong>Drive</strong></a></li>
-        <li><a href="https://t.me/stataleinformatica">Canale <strong>Telegram</strong></a></li>
+        <li><a href="https://t.me/stataleinformatica">Canale <strong>Network</strong></a></li>
       </ul>
       <p class="view">
         <a href="https://t.me/joinchat/ALnoP0sisnneYcGOpUaRiA">Gruppo dei materiali</a>
         <br>
         <a href="https://t.me/joinchat/ALnoP0haA-GjHjmlmbW-vg">Gruppo per le ripetizioni</a>
+        <br>
+        <a href="https://t.me/UniMiCazzeggio">Gruppo freetalk</a>
         <br><br>
         Accesso rapido servizi Unimi<br>
         <a href="http://www.quickunimi.it/">Quick Unimi</a>
@@ -50,9 +56,8 @@
       <p>
         <em>
           Pian piano stanno venendo create le varie faq dei corsi.<br>
-          Se vuoi contribuire allo sviluppo di esse puoi contattare <a href="https://t.me/giuseppetm">@giuseppetm</a> su telegram.<br>
-          Ci sarebbe da compilare il file latex con le domande del relativo corso seguendo questo <a href="https://github.com/NetworkStataleInformatica/faq/blob/master/faq_files/template.tex">template</a>.
-          Si consiglia l'uso di TexLive e TexStudio.
+          Se vuoi aiutare nello sviluppo di esse, puoi entrare nel canale riguardante le faq (lo trovi nei link principali del sito) e proporre 
+          nuove domande con relativa risposta per il corso a cui vuoi contribuire.
         </em>
       </p>
 
@@ -61,15 +66,18 @@
         <em>
           È possibile trovare domande <b>generali</b> fatte più frequentemente al seguente
           <a href="https://orientamento.di.unimi.it/index.php/iniziative/tutor-di-processo">link</a>.
+          Queste sono più per le matricole, ma più avanti creeremo delle FAQ anche in merito a borse di studio e altri argomenti.
         </em>
       </p>
 
       <h2>Faq dei corsi</h2>
       <p>
         <em>
-          Ogni corso è dotato di un file latex con le relative FAQ; il link porta ovviamente al pdf, e se non è
-          ancora stato creato è segnato in rosso.<br>
-          <a href="https://github.com/NetworkStataleInformatica/faq/tree/master/faq_files">Qui</a> puoi accedere alla cartella dei file latex.
+          <a href="https://github.com/NetworkStataleInformatica/faq/tree/master/faq_files">
+            Qui
+          </a> 
+          puoi accedere alla cartella dei file latex relativi alle FAQ.<br>
+          Se vuoi proporre nuove domande con risposta puoi farlo tramite l'apposito canale.
         </em>
       </p>
 
