Sito web e readme aggiornati

--- a/site/index.html
+++ b/site/index.html
@@ -19,13 +19,13 @@
     <header>
       <h1><a href="https://github.com/NetworkStataleInformatica">Network <br>Statale Informatica</h1></a>
       <div><img src="logo.png" style="width:150px; height:150px; padding-left:50px;"><br><br></div>
-      <p>Sito web contenente faq dei vari corsi e tutte le informazioni che possono essere utili per l'utilizzo del network.</p>
+      <p>Benvenuti nel sito web del nostro network! Qui potete trovare ogni link ai gruppi e faq dei corsi della triennale di Informatica (Unimi), e altre informazioni utili.</p>
       <p class="view">
-        <a href="https://t.me/faqStataleInformatica" class="important">Vai al canale delle faq
+        <a href="https://t.me/faqStataleInformatica">Vai al canale delle faq
           <small>faqStataleInformatica</small></a>
       </p>
       <p class="view">
-        <a href="https://github.com/NetworkStataleInformatica/faq" class="important">Vai alla repository
+        <a href="https://github.com/NetworkStataleInformatica/faq">Vai alla repository
           <small>NetworkStataleInformatica/faq</small></a>
       </p>
       <ul>
@@ -52,7 +52,7 @@
 
 
     <section id="faq">
-      <h2>Avvisi</h2> 
+      <h2>Collabora alla creazione delle faq</h2> 
       <p>
         <em>
           Pian piano stanno venendo create le varie faq dei corsi.<br>
