Aggiunte faq di discreto e logica

--- a/site/index.html
+++ b/site/index.html
@@ -115,11 +115,11 @@
           </li>
           <li>
             <a href="https://t.me/joinchat/ALnoP0cgIJQYZJI47-Rorg">Logica matematica</a>
-            <a><small class="linkNotAvailable">faq</small></a>
+            <small class="linkAvailable"><a href="faq_files/logica_matematica/logica_matematica.pdf">faq</a></small>
           </li>
           <li>
             <a href="https://t.me/joinchat/ALnoP0x7F6xl_pmnHRmGvw">Matematica del discreto</a>
-            <a><small class="linkNotAvailable">faq</small></a>
+            <small class="linkAvailable"><a href="faq_files/matematica_del_discreto/matematica_del_discreto.pdf">faq</a></small>
           </li>
           <li>
             <a href="https://t.me/joinchat/ALnoP08pDVwN2hP_tjLrRw">Architettura degli elaboratori II</a>
