Aggiunti lfa e sicurezza e privatezza

--- a/site/index.html
+++ b/site/index.html
@@ -111,7 +111,7 @@
         <ul>
           <li>
             <a href="https://t.me/joinchat/ALnoP0iK5gEJLXWH6GpnFw">Linguaggi formali e automi</a>
-            <a><small class="linkNotAvailable">faq</small></a>
+            <small class="linkAvailable"><a href="faq_files/linguaggi_formali_e_automi/linguaggi_formali_e_automi.pdf">faq</a></small>
           </li>
           <li>
             <a href="https://t.me/joinchat/ALnoP0cgIJQYZJI47-Rorg">Logica matematica</a>
@@ -211,6 +211,10 @@
             <a><small class="linkNotAvailable">faq</small></a>
           </li>
           <li>
+            <a href="https://t.me/joinchat/ALnoPxO-64VXTERluGHZnA">Sicurezza e privatezza</a>
+            <small class="linkAvailable"><a href="faq_files/sicurezza_e_privatezza/sicurezza_e_privatezza.pdf">faq</a></small>
+          </li>
+          <li>
             <a href="https://t.me/joinchat/I5_YNhrkrpY2q6ZTcFAiKA">Sistemi informativi</a>
             <a><small class="linkNotAvailable">faq</small></a>
           </li>
@@ -248,10 +252,6 @@
           </li>
           <li>
             <a href="https://t.me/joinchat/ALnoPxfPPh56XUBx8AmorA">Ricerca operativa</a>
-            <a><small class="linkNotAvailable">faq</small></a>
-          </li>
-          <li>
-            <a href="https://t.me/joinchat/ALnoPxO-64VXTERluGHZnA">Sicurezza e privatezza</a>
             <a><small class="linkNotAvailable">faq</small></a>
           </li>
           <li>
